# auction_dapp_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  dfx.json  package.json
src/auction_dapp_rs/: Cargo.toml  auction_dapp_rs.did
src/auction_dapp_rs/src/: lib.rs
src/auction_dapp_rs_assets/src/: index.html  index.js
