[package]
name = "auction_dapp_rs"
version = "0.1.0"
authors = ["lshoo36<lshoo36@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.2.4"
ic-cdk-macros = "0.2.4"
